Ajustes de las formas en las que se imprimer y prueban los cambios de la data a book y author